# demo_review

./: .env.template  .gitignore  .rubocop.yml  CLAUDE.md  Gemfile  README.md  app_logger.py  app_logger.rb  application_environment.rb  backup_directory_rotator.rb  constant.py  constant.rb  daily.rb  daily_reviews_counter.rb  date.rb  input.csv  main.py  main.rb  pyproject.toml  requirements.txt  review_daily_scraper.rb  review_formatter.rb  review_scraper.rb  ruff.toml  slack_notify.py  slack_notify.rb  time.rb
.github/actions/config_ssh/: action.yml
.github/backups/: deploy00.yaml  deploy02.good.yml  deployv01.yml
.github/workflows/: deploy.yml
config/: schedule.rb
cronjob_script/: add_google_review_to_databricks_daily.sh  google_review_scraping_daily.sh  rotate_backup_directory_daily.sh
deploy_scripts/: deploy_app.sh  json_to_env.py
docs/: WORKFLOW_VALIDATION.md
docs/ansible_deploy_playbook/: deploy-core-google-reviews-scraper.yml  main.yml
input/: locations.json
spec/: spec_helper.rb  time_spec.rb
